--- a/ExordiumGames/appsettings.json
+++ b/ExordiumGames/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionStrings": { "AppDbContextConnection": "" },
+  "ConnectionStrings": { "AppDbContextConnection": "Data Source=DESKTOP-IB982RD;Initial Catalog=ExordiumGame;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False" },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
